# simulacra

./: README.md  pyproject.toml  requirements.txt  simulations.db  simulations.db-journal
.claude/: settings.local.json
app/: config.py  database.py  main.py
app/agents/: factory.py  prompts.py  tools.py
app/api/: agents.py  experiments.py  simulations.py
app/engine/: base.py  registry.py  runner.py
app/engine/game_theory/: base_game.py  identity_generator.py
app/engine/game_theory/bystander/: simulation.py
app/engine/game_theory/prison/: analysis.py  day_orchestrator.py  identity_generator.py  prompts.py  simulation.py
app/engine/game_theory/ultimatum/: simulation.py
app/engine/policy/: distribution_agent.py  respondent_agent.py  simulation.py  synthesis_agent.py
app/models/: __init__.py  agent_record.py  interaction.py  simulation.py
app/schemas/: __init__.py  agent.py  game_theory.py  simulation.py
docs/plans/: 2026-03-01-bystander-effect-design.md  2026-03-01-bystander-effect-plan.md  2026-03-01-frontend-scaffold-design.md  2026-03-01-neighborhood-visualization-design.md  2026-03-01-neighborhood-visualization.md
static/: index.html
